Bug 116041 - iwlwifi: incorrect firmware file name exported for iwl-8260
Summary: iwlwifi: incorrect firmware file name exported for iwl-8260
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-08 08:59 UTC by Greg White
Modified: 2016-04-12 08:49 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.6-rc2
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Greg White 2016-04-08 08:59:34 UTC
In iwl-8000.c, the following firmware is exported:

MODULE_FIRMWARE(IWL8000_MODULE_FIRMWARE(IWL8000_UCODE_API_OK));

Per the corresponding macro, this results in an export that looks like this:

iwlwifi-8000-21.ucode

In linux-firmware-git, that file is actually:

iwlwifi-8000C-21.ucode 

Note the C.

This is breaking (at least) the Arch mkinitcpio process.

Note You need to log in before you can comment on or make changes to this bug.